--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Website</title>
+  <title>Blank White Screen</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
